--- a/src/client/sass/_layout.scss
+++ b/src/client/sass/_layout.scss
@@ -21,3 +21,55 @@ h1 {
 h3 {
   color: rgb(86, 150, 67);
 }
+
+button {
+    padding: 12px 20px;
+    border-radius: 4px;
+    font-weight: 700;
+}
+
+.submit-button {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 1em;
+}
+
+.result-container {
+    flex: 1;
+}
+
+.card {
+    border: 1px solid;
+    border-radius: 0.25rem;
+    padding: 1rem 0.5rem;
+    margin-bottom: 1em;
+    border-color: #e6e6e6;
+    background-color: #ffffff;
+    box-shadow: 1px 3px 3px 0 #e6e6e6;
+    .card-body {
+        display: flex;
+    }
+}
+
+input[type=text] {
+    font-size: 1em;
+    flex: 1;
+    flex-grow: 1;
+    flex-shrink: 0;
+    padding: 12px 20px;
+    margin: 8px 20px 8px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.input-group {
+    display: flex;
+    flex-direction: column;
+    flex: 2;
+    &.double {
+        flex: 4;
+    }
+}
