--- a/src/server/template/index.html
+++ b/src/server/template/index.html
@@ -5,6 +5,6 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <div id='origin' />
+    <div id='origin'></div>
  </body>
 </html>
