--- a/src/client/sass/main.scss
+++ b/src/client/sass/main.scss
@@ -1,3 +1,5 @@
-@import 'layout';
-@import 'header';
-@import 'footer';
+@import "layout";
+@import "header";
+@import "footer";
+@import "login";
+@import "sidebar";
