--- a/src/client/sass/_sidebar.scss
+++ b/src/client/sass/_sidebar.scss
@@ -5,17 +5,34 @@
   left: 0;
   z-index: 100; /* Behind the navbar */
   padding: 0;
+  padding-top: 0%;
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.1);
+  h1 {
+    font-style: italic;
+    font-weight: 700;
+    color: black;
+    padding-top: 10%;
+    padding-left: 7px;
+  }
+  .h1-holder {
+    height: 6em;
+    border-bottom-color: white;
+    background-color: silver;
+  }
+  .gap {
+    padding-top: 100px;
+  }
 }
 
 .sidebar .nav-link {
   font-weight: 500;
-  color: #333;
+  font-size: 24px;
+  color: black;
 }
 
 .sidebar .nav-link {
   margin-right: 4px;
-  color: #999;
+  color: gray;
 }
 
 .sidebar .nav-link.active {
