style error state

--- a/src/client/components/Entity/styles.scss
+++ b/src/client/components/Entity/styles.scss
@@ -17,6 +17,7 @@
 
     .overlay {
         display: flex;
+        flex-flow: column;
         justify-content: center;
         align-items: center;
         position: absolute;
