--- a/src/client/sass/_loginpage.scss
+++ b/src/client/sass/_loginpage.scss
@@ -1,4 +1,9 @@
-body {
+.login-main {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
   background-image: url("../../Images/login-background.png");
-  background-size: 100%;
+  background-size: cover;
 }
