--- a/src/client/sass/_homescreen.scss
+++ b/src/client/sass/_homescreen.scss
@@ -4,7 +4,7 @@
   left: 0;
   bottom: 0;
   right: 0;
-  background-image: url("../../Images/homescreen-background.png");
+  background-image: url("../images/homescreen-background.jpg");
   background-size: cover;
 }
 
