--- a/src/client/sass/_loginpage.scss
+++ b/src/client/sass/_loginpage.scss
@@ -4,6 +4,6 @@
   left: 0;
   bottom: 0;
   right: 0;
-  background-image: url("../../Images/login-background.png");
+  background-image: url("../images/login-background.jpg");
   background-size: cover;
 }
