--- a/src/client/sass/_loginpage.scss
+++ b/src/client/sass/_loginpage.scss
@@ -6,4 +6,18 @@
   right: 0;
   background-image: url("../../Images/login-background.png");
   background-size: cover;
+  flex: 100%;
+
+  h1 {
+    padding-left: 25%;
+    padding-top: 25%;
+    font-weight: 800;
+    font-size: 36pt;
+    color: white;
+    min-width: 1000px;
+  }
+
+  .loginButton {
+    padding-left: 40%;
+  }
 }
