Created enzyme tests for newly created components/containers.

--- a/src/client/sass/_callbackpage.scss
+++ b/src/client/sass/_callbackpage.scss
@@ -1,7 +1,8 @@
 .callbackPageDiv {
   font-size: 32pt;
-  padding-top: 25%;
+  padding-top: 24%;
   padding-left: 35%;
+  color: silver;
   background-color: whitesmoke;
   font-weight: 500;
   position: absolute;
