--- a/src/client/sass/_loginbutton.scss
+++ b/src/client/sass/_loginbutton.scss
@@ -4,14 +4,10 @@
   color: white;
   .btntext {
     font-size: 14pt;
-    font-weight: bold;
+    font-weight: bolder;
   }
 }
 
 .loginbtn:hover {
   background-color: black;
-}
-
-button {
-  font-size: 24pt;
 }
