work on styling projects component, finish create local functionality

--- a/src/client/components/Project/styles.scss
+++ b/src/client/components/Project/styles.scss
@@ -28,3 +28,8 @@ $project-error: rgba(195, 98, 120, 0.8);
     }
 }
 
+// Create Button
+.projects.createButton {
+    width: 100%;
+    background-color: $project-dark;
+}
