--- a/src/client/components/Education/styles.scss
+++ b/src/client/components/Education/styles.scss
@@ -1,25 +1,25 @@
 
 // Project Theme
-$project-light: #BA9FCB;
-$project-medium: #845A9E;
-$project-dark: #6D3E8A;
-$project-saving: rgba(109, 62, 138, 0.8);
-$project-error: rgba(195, 98, 120, 0.8);
+$education-light: #FFAB85;
+$education-medium: #FF6824;
+$education-dark: #FF4F00;
+$education-saving: rgba(109, 62, 138, 0.8);
+$education-error: rgba(195, 98, 120, 0.8);
 
-.projects.container {
+.education.container {
     // Main background
-    background-color: $project-medium;
+    background-color: $education-medium;
 
     // Actionbar background
-    .actionBar { background-color: $project-dark; }
+    .actionBar { background-color: $education-dark; }
 
     // Overlay colors (semi-transparent)
-    .saving { background-color: $project-saving; }
-    .error { background-color: $project-error; }
+    .saving { background-color: $education-saving; }
+    .error { background-color: $education-error; }
 
     // Disabled form field background
     input, textarea, select {
-        &.disabled { background-color: $project-light; }
+        &.disabled { background-color: $education-light; }
     }
     
     // Overlay text is white
@@ -29,7 +29,7 @@ $project-error: rgba(195, 98, 120, 0.8);
 }
 
 // Create Button
-.projects.createButton {
+.education.createButton {
     width: 100%;
-    background-color: $project-dark;
+    background-color: $education-dark;
 }
