standardize pages, start adapting login page for mobile

--- a/src/client/containers/DashboardPage/styles.scss
+++ b/src/client/containers/DashboardPage/styles.scss
@@ -4,7 +4,7 @@
   left: 0;
   bottom: 0;
   right: 0;
-  background-image: url("../images/homescreen-background.jpg");
+  background-image: url("../../images/homescreen-background.jpg");
   background-size: cover;
 }
 
