--- a/src/client/containers/LoginPage/styles.scss
+++ b/src/client/containers/LoginPage/styles.scss
@@ -1,8 +1,8 @@
 #LOGIN_PAGE {
   background-image: url("../../images/login-background.jpg");
   background-size: cover;
+  background-position: center;
   main {
-    white-space: nowrap;
     color: white;
     text-align: center;
   }
