--- a/src/client/containers/DashboardPage/styles.scss
+++ b/src/client/containers/DashboardPage/styles.scss
@@ -1,32 +1,13 @@
-.homescreen-main {
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background-image: url("../../images/homescreen-background.jpg");
-  background-size: cover;
-}
-
-.profileButton {
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
-.buttonCluster {
-  position: absolute;
-  top: 30%;
-  left: 19%;
-  height: 200px;
-}
-
-.title {
-  position: absolute;
-  left: 1%;
-  top: 1%;
-  font-size: 36pt;
-  font-weight: 800;
-  font-style: italic;
-  color: white;
+#DASHBOARD_PAGE {
+  main {
+    position: absolute;
+    top: 0;
+    z-index: -1;
+    background-image: url("../../images/homescreen-background.jpg");
+    background-size: cover;
+    background-position: center;
+  }
+  h1 {
+    color: white;
+  }
 }
