--- a/src/client/styles.scss
+++ b/src/client/styles.scss
@@ -1,10 +1,15 @@
+html, body, #origin, .container-fluid, main {
+  width: 100%;
+  height: 100%;
+}
+
 .container-fluid {
   padding: 0;
 }
 
 main {
-  padding-left: 2rem;
-  padding-right: 2rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 
 .vertical-center {
