--- a/src/client/components/Header/styles.scss
+++ b/src/client/components/Header/styles.scss
@@ -2,7 +2,7 @@ header {
   display: flex !important;
   align-items: center;
   padding: 10px;
-  min-height: 100px;
+  height: 120px;
   z-index: 1;
   h1 {
     margin: 0 auto;
