--- a/src/client/components/ProfileButton/styles.scss
+++ b/src/client/components/ProfileButton/styles.scss
@@ -2,6 +2,7 @@
   z-index: 2;
   position: absolute;
   right: 2rem;
+  top: 1.2rem;
   &:active, &:hover {
     outline: none;
     color: #c5c5c5;
