--- a/src/client/containers/DashboardPage/styles.scss
+++ b/src/client/containers/DashboardPage/styles.scss
@@ -9,6 +9,7 @@
     padding-top: 200px;
     display: grid;
     a {
+      text-decoration: none;
       width: 100%;
       height: 100%;
       display: flex;
