--- a/src/client/containers/ProfilePage/styles.scss
+++ b/src/client/containers/ProfilePage/styles.scss
@@ -1,11 +1,3 @@
-.profileBody {
-    position:fixed;
-    padding:0;
-    margin:0;
-    top:0;
-    left:0;
-    width: 100%;
-    height: 100%;
-    background-color: whitesmoke;
-    background-size: cover;
+#PROFILE_PAGE {
+    height: 100vh;
 }
