--- a/src/client/components/Certification/styles.scss
+++ b/src/client/components/Certification/styles.scss
@@ -6,7 +6,7 @@ $certifications-dark: #6D3E8A;
 $certifications-saving: rgba(109, 62, 138, 0.8);
 $certifications-error: rgba(195, 98, 120, 0.8);
 
-.certifications.container {
+.certifications {
     // Main background
     background-color: $certifications-medium;
 
