--- a/src/client/components/Project/styles.scss
+++ b/src/client/components/Project/styles.scss
@@ -6,7 +6,7 @@ $project-dark: #6D3E8A;
 $project-saving: rgba(109, 62, 138, 0.8);
 $project-error: rgba(195, 98, 120, 0.8);
 
-.projects.container {
+.projects {
     // Main background
     background-color: $project-medium;
 
