--- a/src/client/components/Contact/styles.scss
+++ b/src/client/components/Contact/styles.scss
@@ -6,7 +6,7 @@ $contacts-dark: #FF4F00;
 $contacts-saving: rgba(109, 62, 138, 0.8);
 $contacts-error: rgba(195, 98, 120, 0.8);
 
-.contacts.container {
+.contacts {
     // Main background
     background-color: $contacts-medium;
 
