--- a/src/client/components/Education/styles.scss
+++ b/src/client/components/Education/styles.scss
@@ -6,7 +6,7 @@ $education-dark: #FF4F00;
 $education-saving: rgba(109, 62, 138, 0.8);
 $education-error: rgba(195, 98, 120, 0.8);
 
-.education.container {
+.education {
     // Main background
     background-color: $education-medium;
 
