--- a/src/client/components/Position/styles.scss
+++ b/src/client/components/Position/styles.scss
@@ -6,7 +6,7 @@ $positions-dark: #FF4F00;
 $positions-saving: rgba(109, 62, 138, 0.8);
 $positions-error: rgba(195, 98, 120, 0.8);
 
-.positions.container {
+.positions {
     // Main background
     background-color: $positions-medium;
 
