--- a/src/client/components/Entity/styles.scss
+++ b/src/client/components/Entity/styles.scss
@@ -3,14 +3,21 @@
 
 .entity {
     z-index: 1;
-    margin-bottom: 10px;
+    margin-bottom: 35px;
+    border-bottom: 5px solid white;
+    border-radius: 10px;
+    background-color: rgba(255,255,255,0.25);
+    color: white;
 
     .actionBar {
         height: 40px;
+        background-color: white;
         justify-content: space-between;
         margin: 0;
         padding-left: 5px;
         padding-right: 5px;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
         button {
             background: none;
             border: none;
@@ -18,6 +25,7 @@
             height:100%;
             width: 34px;
             svg {
+                color: darkslategrey;
                 height: 100%;
                 width: 100%;
             }
@@ -38,6 +46,10 @@
     }
     
     form {
+        padding-top: 15px;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-bottom: 0px;
         .formLabel {
             text-align: center;
         }
@@ -48,11 +60,14 @@
         label, input {
             font-weight: bold;
         }
+        input {
+            color: rgb(46, 46, 46);
+            background-color: white;
+        }
         textarea {
             resize: none;
             overflow-y: hidden;
         }
-        padding: 10px;
         .form-control {
             border: none;
         } 
@@ -62,3 +77,8 @@
     }
 }
 
+.createButton {
+    width: 100%;
+    background-color: grey;
+    color: white;
+}
