--- a/src/client/components/Sidebar/styles.scss
+++ b/src/client/components/Sidebar/styles.scss
@@ -33,7 +33,7 @@ hr.divider {
 
 // Color/shape of burger icon bars
 .bm-burger-bars {
-  background: gray;
+  background: white;
 }
 
 // Position and sizing of clickable cross button
