--- a/src/client/styles.scss
+++ b/src/client/styles.scss
@@ -1,10 +1,11 @@
-body {
-  background-image: url("./images/homescreen-background.jpg");
-}
+// body {
+//   background-image: url("./images/homescreen-background.jpg");
+// }
 
 .container-fluid {
   padding: 0;
   padding-bottom: 7rem;
+  background-image: url("./images/homescreen-background.jpg");
   
   background-size: cover;
   background-position: center;
