--- a/src/client/components/Entity/styles.scss
+++ b/src/client/components/Entity/styles.scss
@@ -2,22 +2,22 @@
 // General Entity Styles
 
 .entity {
+    position: relative;
     z-index: 1;
     margin-bottom: 35px;
-    border-bottom: 5px solid white;
     border-radius: 10px;
-    background-color: rgba(255,255,255,0.25);
+    border: 5px solid #e2e2e2;
+    // background-color: rgba(255,255,255,0.25);
+    background-color: #3E5A66;
     color: white;
 
     .actionBar {
         height: 40px;
-        background-color: white;
+        background-color: #e2e2e2;
         justify-content: space-between;
         margin: 0;
         padding-left: 5px;
         padding-right: 5px;
-        border-top-left-radius: 10px;
-        border-top-right-radius: 10px;
         button {
             background: none;
             border: none;
@@ -25,7 +25,7 @@
             height:100%;
             width: 34px;
             svg {
-                color: darkslategrey;
+                color: #0D2846;
                 height: 100%;
                 width: 100%;
             }
@@ -39,10 +39,13 @@
         align-items: center;
         position: absolute;
         z-index: 2;
-        border-radius: 4px;
         height: 100%;
         width: 100%;
-        margin-left: -15px;
+        background-color: #e2e2e2;
+        color: #0D2846;
+        p {
+            font-size: 20px;
+        }
     }
     
     form {
@@ -50,35 +53,47 @@
         padding-left: 20px;
         padding-right: 20px;
         padding-bottom: 0px;
-        .formLabel {
-            text-align: center;
-        }
         label {
+            float: right;
+            font-weight: 400;
+            letter-spacing: 0.7px;
+            color: #e2e2e2;
             padding-top: 7px;
             white-space: nowrap;
         }
-        label, input {
-            font-weight: bold;
+        textarea:hover, input:hover, textarea:active, input:active, textarea:focus, input:focus, button:focus, button:active, button:hover, select:focus, select:active, select:hover, label:focus, .btn:active, .btn.active {
+            border-color: #cccccc;
+            box-shadow: none;
+            -webkit-box-shadow: none;
         }
-        input {
-            color: rgb(46, 46, 46);
-            background-color: white;
+        input, textarea, select {
+            font-weight: 450;
+            color: #0D2846;
+            background-color: #66808c !important;
+            &:not(.disabled) {
+                background-color: #8ba4af !important;
+            }
+        }
+        ::placeholder {
+            font-weight: 350;
+            color: #0D2846;
+            opacity: 0.6;
         }
         textarea {
             resize: none;
             overflow-y: hidden;
+            width: 100%;
         }
         .form-control {
             border: none;
         } 
-        textarea {
-            width: 100%;
-        }
     }
 }
 
 .createButton {
     width: 100%;
-    background-color: grey;
-    color: white;
+    font-size: 18px !important;
+    font-weight: 450 !important;
+    background-color: #e2e2e2 !important;
+    color: #0D2846 !important;
 }
