--- a/src/client/components/ProfileForm/styles.scss
+++ b/src/client/components/ProfileForm/styles.scss
@@ -1,11 +1,8 @@
-.formBody {
-    align-items: center;
-    align-content: center;
-    padding-left: 25%;
-    padding-top: 5%;
-    min-width: 1000px;
-    .updateButton {
-        width: 75%;
-        margin-left: 12%;
+.profile-buttons {
+    * {
+        margin: 0 auto;
+        .save {
+            margin-right: 30px;
+        }
     }
 }
