--- a/src/client/containers/DashboardPage/styles.scss
+++ b/src/client/containers/DashboardPage/styles.scss
@@ -7,6 +7,7 @@
     padding-top: 200px;
     display: grid;
     a {
+      margin-bottom: 30px;
       color: #b5d3e0;
       text-decoration: none;
       display: flex;
