show details when click on item

--- a/src/client/containers/CallbackPage/styles.scss
+++ b/src/client/containers/CallbackPage/styles.scss
@@ -1,7 +1,6 @@
 
 #CALLBACK_PAGE {
   font-size: 32pt;
-  color: silver;
-  background-color: whitesmoke;
+  color: #b5d3e0;
   font-weight: 500;
 }
