--- a/src/client/containers/UnfoundPage/styles.scss
+++ b/src/client/containers/UnfoundPage/styles.scss
@@ -1,7 +1,6 @@
 
 #UNFOUND_PAGE {
-  color: silver;
-  background-color: whitesmoke;
+  color: #b5d3e0;
   text-align: center;
   font-size: 24pt;
   svg {
