--- a/src/client/components/Details/styles.scss
+++ b/src/client/components/Details/styles.scss
@@ -7,8 +7,8 @@
     background-color: #e2e2e2;
     color: #0D2846;
     padding-bottom: 3px;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 150px;
+    margin-right: 150px;
     .row {
         margin: 0;
         padding-left: 15px;
@@ -18,6 +18,8 @@
     .detailsHeader {
         padding-top: 0px;
         padding-bottom: 3px;
+    }
+    .opposite {
         justify-content: space-between;
     }
 }
