--- a/src/client/components/Details/styles.scss
+++ b/src/client/components/Details/styles.scss
@@ -1,9 +1,10 @@
 #TIMELINE_DETAILS {
+    box-shadow: 0px 0px 20px white;
     pointer-events: none;
     font-weight: bold;
     margin-top: 50px;
     border-radius: 10px;
-    border: 5px solid #e2e2e2;
+    border: 5px solid #0D2846;
     background-color: #e2e2e2;
     color: #0D2846;
     padding-bottom: 3px;
@@ -16,6 +17,8 @@
         padding-top: 3px;
     }
     .detailsHeader {
+        background-color: #0D2846;
+        color: white;
         padding-top: 0px;
         padding-bottom: 3px;
     }
