--- a/src/client/containers/LoginPage/styles.scss
+++ b/src/client/containers/LoginPage/styles.scss
@@ -1,5 +1,6 @@
 #LOGIN_PAGE {
   background-image: url("../../images/login-background.jpg") !important;
+  background-blend-mode: normal;
   width: 100%;
   height: 100vh;
   main {
