Trouble with using document routes ocurred. Created an aesthetic example to use for the demo.

--- a/src/client/components/DocumentsForm/styles.scss
+++ b/src/client/components/DocumentsForm/styles.scss
@@ -5,8 +5,8 @@
   .uploadFormGroup {
     align-content: center;
     align-items: center;
-    .deleteButton{
-      margin-left: 80%;
+    .itemCol {
+      min-width: 80%;
     }
     .documentUpload {
       padding-bottom: 2.5%;
