Performed additional styling updates.

--- a/src/client/components/DocumentsForm/styles.scss
+++ b/src/client/components/DocumentsForm/styles.scss
@@ -10,6 +10,12 @@
       border: 5px solid #0D2846;
       border-radius: 10px;
     }
+    .submitDownloadButton {
+      font-size: 18px;
+      font-weight: 450;
+      background-color: #e2e2e2;
+      color: #0D2846;
+    }
     .itemCol {
       min-width: 80%;
       background-color: #66808c;
